--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "start": "gulp",
-    "build": "gulp --production"
+    "build": "NODE_ENV=production gulp --production"
   },
   "author": "Colin McGraw",
   "license": "ISC",
@@ -21,7 +21,12 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.66.1",
-    "webpack": "^5.88.2",
-    "yargs": "^17.7.2"
+    "webpack": "^5.88.2"
+  },
+  "dependencies": {
+    "@barba/core": "^2.9.7",
+    "@studio-freight/lenis": "^1.0.27",
+    "gsap": "^3.12.2",
+    "lazysizes": "^5.3.2"
   }
 }
